os/bluestore: invoke _prepare_ondisk_format_super as the last op

Fixes: https://tracker.ceph.com/issues/45133

Signed-off-by: Igor Fedotov <ifedotov@suse.com>